--- a/Front-End-Project.css
+++ b/Front-End-Project.css
@@ -11,30 +11,36 @@
     font-weight:lighter;
 }
 
-#logoAndBall img {
-    height: 200px;
-    width: 200px;
-    /* display: flex;
-    flex-direction: column; */
-    /* margin-left: auto;
-    margin-right: auto; */
+#logo img {
+    height: 20px;
+    width: 20px;
 }
+
+#leftBall img {
+    height: 20px;
+    width: 20px;
+}
+
+#rightBall img {
+    height: 20px;
+    width: 20px;
+}
+
+.row {
+    justify-content: space-between;
+}
+
+
 
 .teamImage {
     height: 150px;
     width: 150px;
     /* border-style: solid;
     border-style: 10px; */
-    border: 10px solid rgb(247, 10, 10);
-
-       
+    padding: 20px;
+    margin-top: 20px;
 }
-/* 
-#imageDiv img {
-    height: 150px;
-    width: 150px;
-    border: 10px solid black;
-    padding: 30px;
-} */
 
-
+ .teamImage:hover {
+    border: 10px solid rgb(0, 0, 0);
+ }
